--- a/src/main/resources/nl/mpi/arbil/localisation/Services.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Services.properties
@@ -14,8 +14,8 @@ NEW\ {0}\ IN\ {1}=New {0} in {1}
 NEW\ {0}=New {0}
 INSERT\ NODE\ ERROR=Insert node error
 ADD\ NODE=Add Node
-NEW\ RESOURCE\ IN\ %S=New resource in %s
-NEW\ RESOURCES\ IN\ %S=New resources in %s
+NEW\ RESOURCE\ IN\ %S=New resource in {0}
+NEW\ RESOURCES\ IN\ %S=New resources in {0}
 #{0} is a mimetype string (which represents the exact file type of a resource, see https://en.wikipedia.org/wiki/Mimetype)
 THERE\ IS\ NO\ CONTROLLED\ VOCABULARY\ FOR\ EITHER\ WRITTEN\ RESOURCE\ OR\ MEDIA\ FILE\ THAT\ MATCH\ \"{0}\".=There is no controlled vocabulary for either Written Resource or Media File that match "{0}".
 THIS\ PROBABLY\ MEANS\ THAT\ THE\ FILE\ IS\ NOT\ ARCHIVABLE.\ HOWEVER,\ YOU\ CAN\ PROCEED\ BY\ MANUALLY\ SELECTING\ THE\ RESOURCE\ TYPE.=This probably means that the file is not archivable. However, you can proceed by manually selecting the resource type.
@@ -33,15 +33,15 @@ REMOVE\ IMDI\ LINKS=Remove IMDI Links
 COPY\ IMDI\ FILE=Copy IMDI File
 ERROR\ READING\ VIA\ THE\ IMDI\ API.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Error reading via the IMDI API. See error log for details.
 ADD\ LINK=Add Link
-#%s is the file name of the template that could not be opened
-COULD\ NOT\ OPEN\ THE\ REQUIRED\ TEMPLATE\ FILE\:\ %S.\ SEE\ ERROR\ LOG\ FOR\ DETAILS\ =Could not open the required template file: %s. See error log for details 
+#{0} is the file name of the template that could not be opened
+COULD\ NOT\ OPEN\ THE\ REQUIRED\ TEMPLATE\ FILE\:\ %S.\ SEE\ ERROR\ LOG\ FOR\ DETAILS\ =Could not open the required template file: {0}. See error log for details 
 LOAD\ TEMPLATE=Load Template
 THE\ REQUIRED\ TEMPLATE\ COULD\ NOT\ BE\ READ.=The required template could not be read.
 DATA\ CATEGORY\:\ <{0}>.\ NO\ DESCRIPTION\ AVAILABLE.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Data category: <{0}>.No description available. See error log for details.
 #{0} is the name of a field (e.g. Actor name) that has no usage description
 NO\ USAGE\ DESCRIPTION\ FOUND\ IN\ THIS\ TEMPLATE\ FOR\:\ {0}=No usage description found in this template for: {0}
-#%s is the filename of the template
-COULD\ NOT\ READ\ THE\ REQUIRED\ TEMPLATE\ FILE\:\ %S.\ SEE\ ERROR\ LOG\ FOR\ DETAILS\ =Could not read the required template file: %s. See error log for details 
+#{0} is the filename of the template
+COULD\ NOT\ READ\ THE\ REQUIRED\ TEMPLATE\ FILE\:\ %S.\ SEE\ ERROR\ LOG\ FOR\ DETAILS\ =Could not read the required template file: {0}. See error log for details 
 LOAD\ CLARIN\ TEMPLATE=Load Clarin Template
 FAILED\ TO\ REMOVE\ RESOURCE\ PROXY\ WITH\ ID\ {0}=Failed to remove resource proxy with id {0}
 UNEXPECTED\ RELATION\ BETWEEN\ SOURCE\ AND\ TARGET\ PATHS.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Unexpected relation between source and target paths. See error log for details.
@@ -55,7 +55,7 @@ ARBIL\ WILL\ NEED\ TO\ CLOSE\ ALL\ TABLES\ ONCE\ THE\ FILES\ ARE\ MOVED=Arbil wi
 #{0} is the filename the configuration should be written to
 ERROR\ SAVING\ CONFIGURATION\ TO\ {0}=Error saving configuration to {0}
 #'Local Corpus' is a fixed name and should be the same as the resource string with the value 'Local Corpus' in the default language
-THE\ FILES\ IN\ YOUR\ 'LOCAL\ CORPUS'\ COULD\ NOT\ BE\ MOVED\ TO\ THE\ REQUESTED\ LOCATION=The files in your 'Local Corpus' could not be moved to the requested location.\nYou can cancel now and nothing will be changed, or you can change the working\ndirectory anyway.\nIf you continue, any corpus and session files in your 'Local Corpus' will move\ninto your 'Working Directories' tree and you will have to import them manually.\nDo you wish to change the working directory despite this?
+THE\ FILES\ IN\ YOUR\ 'LOCAL\ CORPUS'\ COULD\ NOT\ BE\ MOVED\ TO\ THE\ REQUESTED\ LOCATION=The files in your ''Local Corpus'' could not be moved to the requested location.\nYou can cancel now and nothing will be changed, or you can change the working\ndirectory anyway.\nIf you continue, any corpus and session files in your ''Local Corpus'' will move\ninto your ''Working Directories'' tree and you will have to import them manually.\nDo you wish to change the working directory despite this?
 ERROR\ SAVING\ CONFIGURATION=Error saving configuration
 #{0} is the filename the configuration should be written to
 COULD\ NOT\ WRITE\ NEW\ CONFIGURATION\ TO\ {0}=Could not write new configuration to {0}
