--- a/src/main/resources/nl/mpi/arbil/localisation/Services_de.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Services_de.properties
@@ -12,8 +12,8 @@ ADD\ RESOURCE=Ressource hinzuf\u00fcgen
 NEW\ {0}=Neue(r/s) {0}
 INSERT\ NODE\ ERROR=Fehler beim Einf\u00fcgen des Knotens
 ADD\ NODE=Knoten hinzuf\u00fcgen
-NEW\ RESOURCE\ IN\ %S=Neue Ressource in %s
-NEW\ RESOURCES\ IN\ %S=Neue Ressourcen in %s
+NEW\ RESOURCE\ IN\ %S=Neue Ressource in {0}
+NEW\ RESOURCES\ IN\ %S=Neue Ressourcen in {0}
 THERE\ IS\ NO\ CONTROLLED\ VOCABULARY\ FOR\ EITHER\ WRITTEN\ RESOURCE\ OR\ MEDIA\ FILE\ THAT\ MATCH\ \"{0}\".= Es besteht kein W\u00f6rterbuch f\u00fcr Textressourcen oder Mediendatei, die mit "{0}" \u00fcbereinstimmen.
 THIS\ PROBABLY\ MEANS\ THAT\ THE\ FILE\ IS\ NOT\ ARCHIVABLE.\ HOWEVER,\ YOU\ CAN\ PROCEED\ BY\ MANUALLY\ SELECTING\ THE\ RESOURCE\ TYPE.= Dies bedeutet wahrscheinlich, dass die Datei nicht archivierbar ist. Sie k\u00f6nnen fortfahren, indem Sie den Ressourcentyp manuell ausw\u00e4hlen.
 DO\ YOU\ WANT\ TO\ PROCEED?=M\u00f6chten Sie fortfahren?
@@ -30,12 +30,12 @@ REMOVE\ IMDI\ LINKS=IMDI-Links entfernen
 COPY\ IMDI\ FILE=IMDI-Datei kopieren
 ERROR\ READING\ VIA\ THE\ IMDI\ API.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Fehler beim Lesen mit IMDI API. Siehe Fehlerprotokoll f\u00fcr Details.
 ADD\ LINK=Link hinzuf\u00fcgen
-COULD\ NOT\ OPEN\ THE\ REQUIRED\ TEMPLATE\ FILE\:\ %S.\ SEE\ ERROR\ LOG\ FOR\ DETAILS\ =Die gew\u00fcnschte Vorlagendatei %s kann nicht ge\u00f6ffnet werden. Siehe Fehlerprotokoll f\u00fcr Details.
+COULD\ NOT\ OPEN\ THE\ REQUIRED\ TEMPLATE\ FILE\:\ %S.\ SEE\ ERROR\ LOG\ FOR\ DETAILS\ =Die gew\u00fcnschte Vorlagendatei {0} kann nicht ge\u00f6ffnet werden. Siehe Fehlerprotokoll f\u00fcr Details.
 LOAD\ TEMPLATE=Vorlage laden
 THE\ REQUIRED\ TEMPLATE\ COULD\ NOT\ BE\ READ.=Die gew\u00fcnschte Vorlage kann nicht gelesen werden.
 DATA\ CATEGORY\:\ <{0}>.\ NO\ DESCRIPTION\ AVAILABLE.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Datenkategorie: <{0}>. Keine Beschreibung verf\u00fcgbar. Siehe Fehlerprotokoll f\u00fcr Details.
 NO\ USAGE\ DESCRIPTION\ FOUND\ IN\ THIS\ TEMPLATE\ FOR\:\ {0}=Keine Verwendungsbeschreibung f\u00fcr {0} in diesem Template gefunden 
-COULD\ NOT\ READ\ THE\ REQUIRED\ TEMPLATE\ FILE\:\ %S.\ SEE\ ERROR\ LOG\ FOR\ DETAILS\ =Gew\u00fcnschte Vorlagendatei %s konnte nicht gelesen werden. Siehe Fehlerprotokoll f\u00fcr Details. 
+COULD\ NOT\ READ\ THE\ REQUIRED\ TEMPLATE\ FILE\:\ %S.\ SEE\ ERROR\ LOG\ FOR\ DETAILS\ =Gew\u00fcnschte Vorlagendatei {0} konnte nicht gelesen werden. Siehe Fehlerprotokoll f\u00fcr Details. 
 LOAD\ CLARIN\ TEMPLATE=CLARIN-Vorlage laden
 FAILED\ TO\ REMOVE\ RESOURCE\ PROXY\ WITH\ ID\ {0}=Entfernen von Ressourcen-Proxy mit ID {0} fehlgeschlagen
 UNEXPECTED\ RELATION\ BETWEEN\ SOURCE\ AND\ TARGET\ PATHS.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Unerwartete Verbindung zwischen Quell- und Zielpfad. Siehe Fehlerprotokoll f\u00fcr Details.
@@ -46,7 +46,7 @@ NO\ TEMPLATE\ FOUND\ FOR=Keine Vorlage f\u00fcr {0} gefunden
 CHANGING\ YOUR\ CURRENT\ PROJECT\ FROM\ {0}\ TO\ {1}=Aktuelles Projekt von:\n{0}\nzu:\n{1} \u00e4ndern.
 ARBIL\ WILL\ NEED\ TO\ CLOSE\ ALL\ TABLES\ ONCE\ THE\ FILES\ ARE\ MOVED=Arbil muss alle Tabellen schlie\u00dfen, nachdem die Dateien verschoben wurden.\nM\u00f6chten Sie fortfahren?
 ERROR\ SAVING\ CONFIGURATION\ TO\ {0}=Fehler bei Speicherung der Konfiguration als {0}
-THE\ FILES\ IN\ YOUR\ 'LOCAL\ CORPUS'\ COULD\ NOT\ BE\ MOVED\ TO\ THE\ REQUESTED\ LOCATION=Die Dateien in Ihrem 'Lokalen Korpus' konnten nicht zum gew\u00fcnschten Speicherort verschoben werden.\nSie k\u00f6nnen jetzt abbrechen und keine \u00c4nderungen werden vorgenommen, oder Sie k\u00f6nnen das \nArbeitsverzeichnis \u00e4ndern.\nWenn Sie fortfahren werden alle Korpus- und Sessiondateien in Ihrem lokalen Korpus \nin Ihren 'Arbeitsverzeichnis'-Baum verschoben und Sie m\u00fcssen sie manuell importieren.\nM\u00f6chten Sie das Arbeitsverzeichnis dennoch \u00e4ndern?
+THE\ FILES\ IN\ YOUR\ 'LOCAL\ CORPUS'\ COULD\ NOT\ BE\ MOVED\ TO\ THE\ REQUESTED\ LOCATION=Die Dateien in Ihrem ''Lokalen Korpus'' konnten nicht zum gew\u00fcnschten Speicherort verschoben werden.\nSie k\u00f6nnen jetzt abbrechen und keine \u00c4nderungen werden vorgenommen, oder Sie k\u00f6nnen das \nArbeitsverzeichnis \u00e4ndern.\nWenn Sie fortfahren werden alle Korpus- und Sessiondateien in Ihrem lokalen Korpus \nin Ihren ''Arbeitsverzeichnis''-Baum verschoben und Sie m\u00fcssen sie manuell importieren.\nM\u00f6chten Sie das Arbeitsverzeichnis dennoch \u00e4ndern?
 ERROR\ SAVING\ CONFIGURATION=Fehler bei Speicherung von Konfiguration
 COULD\ NOT\ WRITE\ NEW\ CONFIGURATION\ TO\ {0}=Neue Konfiguration konnte nicht in {0} geschrieben werden
 COULD\ NOT\ WRITE\ TO\ STORAGE\ DIRECTORY.\ UPDATE\ CHECK\ FAILED!=Konnte nicht ins Speicherverzeichnis schreiben. Aktualisierungspr\u00fcfung fehlgeschlagen!
