--- a/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
@@ -48,20 +48,20 @@ NOT\ SUPPORTED=Not supported
 MOVING\ IMDI\ METADATA\ TO\ CMDI\ METADATA\ FILES\ IS\ CURRENTLY\ NOT\ SUPPORTED=Moving IMDI metadata to CMDI metadata files is currently not supported
 INSERT\ NODE\ ERROR=Insert node error
 ERROR\ MOVING\ NODES=Error moving nodes
-COULD\ NOT\ MOVE\ %S\ DUE\ TO\ ERROR.\ SEE\ LOG\ FOR\ DETAILS.\ CONTINUE\ MOVING\ NODES?=Could not move %s due to error. See log for details. Continue moving nodes?
+COULD\ NOT\ MOVE\ %S\ DUE\ TO\ ERROR.\ SEE\ LOG\ FOR\ DETAILS.\ CONTINUE\ MOVING\ NODES?=Could not move {0} due to error. See log for details. Continue moving nodes?
 CANCEL=Cancel
 ABORT=Abort
 SKIP=Skip
 MOVE\ ALL=Move all
 MOVE=Move
-MOVE_SOURCE_NODE_TO_TARGET_NODE=Move %s to %s?
+MOVE_SOURCE_NODE_TO_TARGET_NODE=Move {0} to {1}?
 SELECT\ EXPORT\ DESTINATION=Select export destination
 SELECT\ NODES\ TO\ EXPORT=Select nodes to export
 NO\ NODES\ ARE\ SELECTED.\ SELECT\ AT\ LEAST\ ONE\ NODE\ TO\ EXPORT.=No nodes are selected. Select at least one node to export.
-AN\ ERROR\ OCCURRED\ WHILE\ EXPORTING\ FAVOURITES=An error occurred while exporting favourites:\n%s.\nSee error log for details.
+AN\ ERROR\ OCCURRED\ WHILE\ EXPORTING\ FAVOURITES=An error occurred while exporting favourites:\n{0}.\nSee error log for details.
 EXPORT\ COMPLETE=Export complete
 FAVOURITES\ HAVE\ BEEN\ EXPORTED=Favourites have been exported
-FAVOURITES_AN\ ERROR\ OCCURRED\ WHILE\ IMPORTING\ FAVOURITES=An error occurred while importing favourites:\n%s.\nSee error log for details.
+FAVOURITES_AN\ ERROR\ OCCURRED\ WHILE\ IMPORTING\ FAVOURITES=An error occurred while importing favourites:\n{0}.\nSee error log for details.
 IMPORT\ COMPLETE=Import complete
 FAVOURITES\ HAVE\ BEEN\ IMPORTED=Favourites have been imported
 SELECT\ FAVOURITES\ EXPORT\ TO\ IMPORT=Select favourites export to import
@@ -69,7 +69,7 @@ FAVOURITES\ EXPORT\ FILE=Favourites export file
 EXPORT\ SELECTION=Export selection
 REFRESH=Refresh
 IMPORT\ FROM\ DISK=Import from disk
-FAVOURITES_THE\ DIRECTORY\ SHOULD\ CONTAIN\ A\ FILE\ CALLED=The directory should contain a file called %s.
+FAVOURITES_THE\ DIRECTORY\ SHOULD\ CONTAIN\ A\ FILE\ CALLED=The directory should contain a file called {0}.
 FAVOURITES_PRESS\ THE\ IMPORT\ BUTTON=Press the import button, then choose an existing directory that has an exported collection of favourites. 
 EXPORT\ FAVOURITES=Export favourites
 IMPORT\ FAVOURITES=Import favourites
@@ -100,14 +100,14 @@ SETUP_YOU\ HAVE\ NOT\ YET\ SELECTED\ PROFILES\ TO\ USE.\ ARE\ YOU\ SURE\ YOU\ WA
 SETUP_CLARIN\ PROFILES=Clarin Profiles
 CANCEL\ WIZARD=Cancel wizard
 #tool tip for 'show' checkboxes in 'edit field views' dialogue
-FIELD_VIEW_TABLE_SHOW\ ONLY\ CHECKED\ FIELDS\ (HIDES\ ALL\ OTHERS\ AND\ OVERRIDES\ HIDE\ FIELDS)=Show only checked fields (hides all others and overrides 'hide fields')
+FIELD_VIEW_TABLE_SHOW\ ONLY\ CHECKED\ FIELDS\ (HIDES\ ALL\ OTHERS\ AND\ OVERRIDES\ HIDE\ FIELDS)=Show only checked fields (hides all others and overrides ''hide fields'')
 FIELD_VIEW_TABLE_INVALID\ WIDTH\ FOR\ COLUMN\ {0}=Invalid width for column {0}
 FIELD_VIEW_TABLE_COLUMN\ WIDTH=Column width
 FIELD_VIEW_TABLE_HIDE=Hide
 FIELD_VIEW_TABLE_SHOW\ ONLY=Show Only
 FIELD_VIEW_TABLE_COLUMN\ NAME=Column Name
 #tool tip for 'hide' checkboxes in 'edit field views' dialogue
-FIELD_VIEW_TABLE_HIDE\ CHECKED\ FIELDS\ (ONLY\ ACTIVE\ WHEN\ NO\ 'SHOW\ ONLY'\ SELECTION\ IS\ MADE)=Hide checked fields (only active when no 'show only' selection is made) 
+FIELD_VIEW_TABLE_HIDE\ CHECKED\ FIELDS\ (ONLY\ ACTIVE\ WHEN\ NO\ 'SHOW\ ONLY'\ SELECTION\ IS\ MADE)=Hide checked fields (only active when no ''show only'' selection is made) 
 ARBIL\ LOG\ CONSOLE=Arbil log console
 #button text, imperative (stop search)
 SEARCH_STOP=stop
@@ -117,10 +117,10 @@ SEARCH_CONNECTING\ TO\ SERVER=connecting to server
 #button text, imperative
 SEARCH_SEARCH=search
 COLUMN\ WIDTH\ INVALID=Column width invalid
-#%s is placeholder for column name, keep!
-TABLE_FIXED\ WIDTH=%s [fixed width]
-#node %1$s in parent %2$s
-%S\ IN\ %S=%1$s in %2$s
+#{0} is placeholder for column name, keep!
+TABLE_FIXED\ WIDTH={0} [fixed width]
+#node {0} in parent {1}
+%S\ IN\ %S={0} in {1}
 NO\ FIELDS\ MATCHED\ THE\ DATA\ ON\ THE\ CLIPBOARD.=No fields matched the data on the clipboard.
 NO\ DATA\ TO\ PASTE.=No data to paste.
 CONTINUE?=Continue?
@@ -138,16 +138,16 @@ TABLE\ COPY=Table Copy
 NOTHING\ SELECTED\ TO\ COPY=Nothing selected to copy
 COULD\ NOT\ SET\ ATTRIBUTES\ FOR\ NEW\ FIELD.\ SEE\ ERROR\ LOG\ FOR\ DETAILS=Could not set attributes for new field. See error log for details
 ERROR\ WHILE\ SETTING\ ATTRIBUTES\ ON\ FIELD=Error while setting attributes on field
-THE\ NODE\ '%S'\ CANNOT\ CONTAIN\ A\ FIELD\ OF\ THE\ SAME\ TYPE\ AS\ '%S'\ IN\ '%S'=The node '%1$s' cannot contain a field of the same type as '%2$s' in '%3$s'
+THE\ NODE\ '%S'\ CANNOT\ CONTAIN\ A\ FIELD\ OF\ THE\ SAME\ TYPE\ AS\ '%S'\ IN\ '%S'=The node ''{0}'' cannot contain a field of the same type as ''{1}'' in ''{2}''
 COULD\ NOT\ CREATE\ FIELD.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Could not create field. See error log for details.
 INSERT\ FIELD=Insert field
-INSERT\ A\ NEW\ FIELD\ CONFIRM=Insert a new field '%1$s' in node '%2$s'?\nThis will save pending changes.
+INSERT\ A\ NEW\ FIELD\ CONFIRM=Insert a new field ''{0}'' in node ''{1}''?\nThis will save pending changes.
 #Matching means identical ('gelijke' in Dutch)
 HIGHLIGHT\ MATCHING\ ROWS=Highlight Matching Rows
 NO\ ROWS\ HAVE\ BEEN\ SELECTED=No rows have been selected
 DELETE\ FIELD=Delete field
-#$1$d is number of instances, %2$s is the name of the field
-DELETE\ %D\ INSTANCE\ OF\ THE\ FIELD\ '%S'?=Delete %1$d instance(s) of the field '%2$s'?
+#$1$d is number of instances, {1} is the name of the field
+DELETE\ %D\ INSTANCE\ OF\ THE\ FIELD\ '%S'?=Delete %1$d instance(s) of the field ''{1}''?
 CANNOT\ DELETE=Cannot delete
 THIS\ FIELD\ CANNOT\ BE\ DELETED\ FROM\ ONE\ OR\ MORE\ OF\ THE\ SHOWN\ NODES=This field cannot be deleted from one or more of the shown nodes\n\n
 A\ COLUMN\ VIEW\ WITH\ THE\ SAME\ NAME\ ALREADY\ EXISTS,\ NOTHING\ SAVED=A Column View with the same name already exists, nothing saved 
@@ -182,7 +182,7 @@ ENTER\ THE\ RESOURCE\ URI\:=Enter the resource URI:
 COULD\ NOT\ DETERMINE\ THE\ ORIGIONAL\ LOCATION=Could not determine the original location
 COULD\ NOT\ DETERMINE\ THE\ ORIGIONAL\ NODE\ TYPE=Could not determine the original node type
 RE\ IMPORT\ BRANCH=Re-import Branch
-ADDING\ A\ NODE\ WILL\ SAVE\ PENDING\ CHANGES=Adding a node will save pending changes to "%s" to disk. Do you want to proceed?
+ADDING\ A\ NODE\ WILL\ SAVE\ PENDING\ CHANGES=Adding a node will save pending changes to "{0}" to disk. Do you want to proceed?
 PROFILES_REFRESH\ LIST=Refresh list
 PAGE\ NOT\ FOUND=Page not found
 <P><STRONG>I/O\ EXCEPTION\ WHILE\ READING\ HELP\ CONTENTS</STRONG></P>=<p><strong>I/O exception while reading help contents</strong></p>
@@ -215,7 +215,7 @@ ADD\ PROFILE=Add Profile
 ENTER\ THE\ PROFILE\ URL=Enter the profile URL
 PROFILES_ADD\ A\ PROFILE\ URL\ TO\ THE\ LIST=Add a profile URL to the list
 PROFILES_ADD\ URL=Add URL
-PROFILES\ SELECTED\ BELOW\ WILL\ BECOME\ AVAILABLE\ IN\ THE\ 'ADD'\ MENU\ OF\ THE\ LOCAL\ CORPUS.\ BY\ DEFAULT,\ ONLY\ SELECTED\ PROFILES\ WILL\ BE\ DOWNLOADED\ FOR\ OFFLINE\ USE.=Profiles selected below will become available in the 'Add' menu of the local corpus. By default, only selected profiles will be downloaded for offline use.
+PROFILES\ SELECTED\ BELOW\ WILL\ BECOME\ AVAILABLE\ IN\ THE\ 'ADD'\ MENU\ OF\ THE\ LOCAL\ CORPUS.\ BY\ DEFAULT,\ ONLY\ SELECTED\ PROFILES\ WILL\ BE\ DOWNLOADED\ FOR\ OFFLINE\ USE.=Profiles selected below will become available in the ''Add'' menu of the local corpus. By default, only selected profiles will be downloaded for offline use.
 ONLY\ LOAD\ PROFILES\ SELECTED\ FOR\ MANUAL\ EDITING=Only load profiles selected for manual editing
 PROFILES_DOWNLOAD\ ALL\ PROFILES\ FOR\ OFFLINE\ USE\ (INCLUDING\ UNSELECTED\ PROFILES)=Download all profiles for offline use (including unselected profiles)
 PROFILES_DOWNLOAD\ ALL=Download all
@@ -255,7 +255,7 @@ REPLACE\ EXISTING\ LOCATION?=Replace existing location?
 NEW\ LOCATION=New location
 REPLACE=Replace
 OVERWRITE\ FILE?=Overwrite file?
-THE\ FOLLOWING\ FILE\ ALREADY\ EXIST\ IN\ THE\ TARGET\ LOCATION=The following file already exist in the target location:\n\n%s\n\n Overwrite?
+THE\ FOLLOWING\ FILE\ ALREADY\ EXIST\ IN\ THE\ TARGET\ LOCATION=The following file already exist in the target location:\n\n{0}\n\n Overwrite?
 DETAILS=Details
 PERFORMCOPY=performCopy
 DETAILS\ >\ >=Details > >
@@ -307,8 +307,8 @@ NEW\ TEMPLATE=New Template
 THE\ TEMPLATE\ {0}\ ALREADY\ EXISTS=The template \"{0}\" already exists.
 TEMPLATES=Templates
 THE\ TEMPLATE\ {0}\ COULD\ NOT\ BE\ CREATED.=The template \"{0}\" could not be created.
-#Internal template, %s = name
-%S\ (INTERNAL)=%s (internal)
+#Internal template, {0} = name
+%S\ (INTERNAL)={0} (internal)
 #text shown for node until it is loaded
 LOADING\ NODE...=loading node...
 HISTORY_LAST\ SAVE=Last Save
@@ -336,7 +336,7 @@ NODES\ OF\ THIS\ TYPE\ CANNOT\ BE\ PASTED\ INTO\ AT\ THIS\ STAGE=Nodes of this t
 PASTED\ STRING\ IS\ NOT\ AND\ IMDI\ FILE=Pasted string is not an IMDI file
 THE\ TARGET\ FILE\ IS\ NOT\ IN\ THE\ CACHE=The target file is not in the cache
 CANNOT\ PASTE\ SESSION\ SUBNODES\ INTO\ A\ CORPUS=Cannot paste session subnodes into a corpus
-THE\ TARGET\ NODE'S\ FILE\ DOES\ NOT\ EXIST=The target node's file does not exist
+THE\ TARGET\ NODE'S\ FILE\ DOES\ NOT\ EXIST=The target node''s file does not exist
 COPYING\ WITH\ UNSAVED\ CHANGES=Copying with unsaved changes
 SOME\ OF\ THE\ NODES\ TO\ BE\ COPIED\ CONTAIN\ UNSAVED\ CHANGES=Some of the nodes to be copied contain unsaved changes.\nUnless they are saved, these changes will not be present in the resulting nodes. Continue anyway?
 %D\ NODES\ COULD\ NOT\ BE\ DELETED\ BECAUSE\ THEY\ HAVE\ NO\ PARENT\n=%d nodes could not be deleted because they have no parent
@@ -346,9 +346,9 @@ DELETE=Delete
 DELETE\ {0}\ NODES?=Delete {0} nodes?
 THIS\ WILL\ ALSO\ SAVE\ ANY\ PENDING\ CHANGES\ TO\ DISK.=This will also save any pending changes to disk.
 DELETE\ THE\ NODE\ {0}?=Delete the node \"{0}\"?
-DELETE\ %D\ NODES\ FROM\ THEIR\ PARENT\ '%S'?=Delete %d nodes from their parent '%s'?\nThis will save pending changes.
-DELETE\ THE\ NODE\ '%S'\ FROM\ ITS\ PARENT\ '%S'?=Delete the node '%s' from its parent '%s'?\nThis will save pending changes.
-CANNOT\ COPY\ {0}\ TO\ {1}="Cannot copy '{0}' to '{1}'"
+DELETE\ %D\ NODES\ FROM\ THEIR\ PARENT\ '%S'?=Delete %d nodes from their parent ''{0}''?\nThis will save pending changes.
+DELETE\ THE\ NODE\ '%S'\ FROM\ ITS\ PARENT\ '%S'?=Delete the node ''{0}'' from its parent ''{1}''?\nThis will save pending changes.
+CANNOT\ COPY\ {0}\ TO\ {1}="Cannot copy ''{0}'' to ''{1}''"
 FOUND\ MORE\ RESULTS\ THAN\ CAN\ BE\ DISPLAYED,\ ONLY\ SHOWING\ THE\ FIRST\ {0}\ RESULTS=Found more results than can be displayed, only showing the first {0} results
 CANNOT\ SEARCH\ {0}\ BECAUSE\ IT\ DOES\ NOT\ HAVE\ AN\ ARCHIVE\ HANDLE=Cannot search "{0}" because it does not have an archive handle
 DELETE\ FROM\ PARENT=Delete from parent
