--- a/src/main/resources/nl/mpi/arbil/localisation/Widgets_es.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Widgets_es.properties
@@ -49,20 +49,20 @@ NOT\ SUPPORTED=No compatible
 MOVING\ IMDI\ METADATA\ TO\ CMDI\ METADATA\ FILES\ IS\ CURRENTLY\ NOT\ SUPPORTED=Todav\u00eda no se pueden transferir los metadatos IMDI a los archivos de metadatos CMDI
 INSERT\ NODE\ ERROR=Error al insertar el nodo
 ERROR\ MOVING\ NODES=Error al mover los nodos
-COULD\ NOT\ MOVE\ %S\ DUE\ TO\ ERROR.\ SEE\ LOG\ FOR\ DETAILS.\ CONTINUE\ MOVING\ NODES?=No se pudo mover %s por un error. Ver registro de errores para m\u00e1s detalles. \u00bfSeguir moviendo los nodos?
+COULD\ NOT\ MOVE\ %S\ DUE\ TO\ ERROR.\ SEE\ LOG\ FOR\ DETAILS.\ CONTINUE\ MOVING\ NODES?=No se pudo mover {0} por un error. Ver registro de errores para m\u00e1s detalles. \u00bfSeguir moviendo los nodos?
 CANCEL=Cancelar
 ABORT=Anular
 SKIP=Saltar
 MOVE\ ALL=Mover todo
 MOVE=Mover
-MOVE_SOURCE_NODE_TO_TARGET_NODE=\u00bfMover %s a %s?
+MOVE_SOURCE_NODE_TO_TARGET_NODE=\u00bfMover {0} a {1}?
 SELECT\ EXPORT\ DESTINATION=Seleccionar destino de la exportaci\u00f3n
 SELECT\ NODES\ TO\ EXPORT=Seleccionar nodos para exportar
 NO\ NODES\ ARE\ SELECTED.\ SELECT\ AT\ LEAST\ ONE\ NODE\ TO\ EXPORT.=Ning\u00fan nodo ha sido seleccionado. Seleccionar como m\u00ednimo un nodo para exportar.
-AN\ ERROR\ OCCURRED\ WHILE\ EXPORTING\ FAVOURITES=Se ha producido un error en la exportaci\u00f3n de los favoritos:\n%s.\nVer registro de errores para m\u00e1s detalles.
+AN\ ERROR\ OCCURRED\ WHILE\ EXPORTING\ FAVOURITES=Se ha producido un error en la exportaci\u00f3n de los favoritos:\n{0}.\nVer registro de errores para m\u00e1s detalles.
 EXPORT\ COMPLETE=Exportaci\u00f3n completada
 FAVOURITES\ HAVE\ BEEN\ EXPORTED=Los favoritos han sido exportados correctamente
-FAVOURITES_AN\ ERROR\ OCCURRED\ WHILE\ IMPORTING\ FAVOURITES=Se ha producido un error en la importaci\u00f3n de los favoritos:\n%s.\nVer registro de errores para m\u00e1s detalles.
+FAVOURITES_AN\ ERROR\ OCCURRED\ WHILE\ IMPORTING\ FAVOURITES=Se ha producido un error en la importaci\u00f3n de los favoritos:\n{0}.\nVer registro de errores para m\u00e1s detalles.
 IMPORT\ COMPLETE=Importaci\u00f3n completada
 FAVOURITES\ HAVE\ BEEN\ IMPORTED=Los favoritos han sido importados correctamente
 SELECT\ FAVOURITES\ EXPORT\ TO\ IMPORT=Seleccionar los favoritos exportados para importar
@@ -70,7 +70,7 @@ FAVOURITES\ EXPORT\ FILE=Archivo de favoritos exportados
 EXPORT\ SELECTION=Exportar selecci\u00f3n
 REFRESH=Actualizar
 IMPORT\ FROM\ DISK=Importar desde disco
-FAVOURITES_THE\ DIRECTORY\ SHOULD\ CONTAIN\ A\ FILE\ CALLED=El directorio deber\u00eda contener un archivo nombrado %s.
+FAVOURITES_THE\ DIRECTORY\ SHOULD\ CONTAIN\ A\ FILE\ CALLED=El directorio deber\u00eda contener un archivo nombrado {0}.
 FAVOURITES_PRESS\ THE\ IMPORT\ BUTTON=Presionar el bot\u00f3n de la importaci\u00f3n y seleccionar un directorio existente que incluya una serie de favoritos exportados.
 EXPORT\ FAVOURITES=Exportar favoritos
 IMPORT\ FAVOURITES=Importar favoritos
@@ -98,13 +98,13 @@ SETUP_NO\ PROFILES\ SELECTED=Ning\u00fan perfil seleccionado
 SETUP_YOU\ HAVE\ NOT\ YET\ SELECTED\ PROFILES\ TO\ USE.\ ARE\ YOU\ SURE\ YOU\ WANT\ TO\ CONTINUE?=Todav\u00eda no se ha seleccionado ning\u00fan perfil. \u00bfEst\u00e1 seguro de querer continuar?
 SETUP_CLARIN\ PROFILES=Perfiles Clarin
 CANCEL\ WIZARD=Cancelar asistente
-FIELD_VIEW_TABLE_SHOW\ ONLY\ CHECKED\ FIELDS\ (HIDES\ ALL\ OTHERS\ AND\ OVERRIDES\ HIDE\ FIELDS)=Mostrar s\u00f3lo campos seleccionados (se ocultar\u00e1n todos los dem\u00e1s y se invalidar\u00e1 la opci\u00f3n 'ocultar campos')
+FIELD_VIEW_TABLE_SHOW\ ONLY\ CHECKED\ FIELDS\ (HIDES\ ALL\ OTHERS\ AND\ OVERRIDES\ HIDE\ FIELDS)=Mostrar s\u00f3lo campos seleccionados (se ocultar\u00e1n todos los dem\u00e1s y se invalidar\u00e1 la opci\u00f3n ''ocultar campos'')
 FIELD_VIEW_TABLE_INVALID\ WIDTH\ FOR\ COLUMN\ {0}=Ancho de la columna {0} no v\u00e1lido
 FIELD_VIEW_TABLE_COLUMN\ WIDTH=Ancho columna
 FIELD_VIEW_TABLE_HIDE=Ocultar
 FIELD_VIEW_TABLE_SHOW\ ONLY=Mostrar s\u00f3lo
 FIELD_VIEW_TABLE_COLUMN\ NAME=Nombre de columna
-FIELD_VIEW_TABLE_HIDE\ CHECKED\ FIELDS\ (ONLY\ ACTIVE\ WHEN\ NO\ 'SHOW\ ONLY'\ SELECTION\ IS\ MADE)=Ocultar campos seleccionados (opci\u00f3n activa s\u00f3lo al seleccionar 'Mostrar s\u00f3lo')
+FIELD_VIEW_TABLE_HIDE\ CHECKED\ FIELDS\ (ONLY\ ACTIVE\ WHEN\ NO\ 'SHOW\ ONLY'\ SELECTION\ IS\ MADE)=Ocultar campos seleccionados (opci\u00f3n activa s\u00f3lo al seleccionar ''Mostrar s\u00f3lo'')
 ARBIL\ LOG\ CONSOLE=Consola del registro de Arbil
 SEARCH_STOP=detener
 SEARCHED\:\ {0}/{1}\ FOUND\:\ {2}=buscado: {0}/{1} encontrado {2}
@@ -112,8 +112,8 @@ SEARCH\ CANCELED=se cancel\u00f3 la b\u00fasqueda
 SEARCH_CONNECTING\ TO\ SERVER=conectando con el servidor
 SEARCH_SEARCH=buscar
 COLUMN\ WIDTH\ INVALID=Ancho de columna no v\u00e1lido
-TABLE_FIXED\ WIDTH=%s [ancho fijo]
-%S\ IN\ %S=%1$s en %2$s
+TABLE_FIXED\ WIDTH={0} [ancho fijo]
+%S\ IN\ %S={0} en {1}
 NO\ FIELDS\ MATCHED\ THE\ DATA\ ON\ THE\ CLIPBOARD.=Ning\u00fan campo coincide con los datos en el portapapeles.
 NO\ DATA\ TO\ PASTE.=Ning\u00fan dato para pegar.
 CONTINUE?=\u00bfContinuar?
@@ -130,14 +130,14 @@ TABLE\ COPY=Copia de tabla
 NOTHING\ SELECTED\ TO\ COPY=No se ha seleccionado nada para copiar
 COULD\ NOT\ SET\ ATTRIBUTES\ FOR\ NEW\ FIELD.\ SEE\ ERROR\ LOG\ FOR\ DETAILS=No se pudieron definir los atributos para el nuevo campo. Ver registro de errores para m\u00e1s detalles
 ERROR\ WHILE\ SETTING\ ATTRIBUTES\ ON\ FIELD=Error al definir los atributos del campo
-THE\ NODE\ '%S'\ CANNOT\ CONTAIN\ A\ FIELD\ OF\ THE\ SAME\ TYPE\ AS\ '%S'\ IN\ '%S'=El nodo '%1$s' no puede contener un campo del mismo tipo que '%2$s' dentro de '%3$s'
+THE\ NODE\ '%S'\ CANNOT\ CONTAIN\ A\ FIELD\ OF\ THE\ SAME\ TYPE\ AS\ '%S'\ IN\ '%S'=El nodo ''{0}'' no puede contener un campo del mismo tipo que ''{1}'' dentro de ''{2}''
 COULD\ NOT\ CREATE\ FIELD.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=No se pudo crear el campo. Ver registro de errores para m\u00e1s detalles.
 INSERT\ FIELD=Insertar campo
-INSERT\ A\ NEW\ FIELD\ CONFIRM=\u00bfInsertar un nuevo campo '%1$s' dentro del nodo '%2$s'?\nSe guardar\u00e1n los cambios pendientes.
+INSERT\ A\ NEW\ FIELD\ CONFIRM=\u00bfInsertar un nuevo campo ''{0}'' dentro del nodo ''{1}''?\nSe guardar\u00e1n los cambios pendientes.
 HIGHLIGHT\ MATCHING\ ROWS=Resaltar filas coincidentes
 NO\ ROWS\ HAVE\ BEEN\ SELECTED=Ninguna fila ha sido seleccionada
 DELETE\ FIELD=Eliminar campo
-DELETE\ %D\ INSTANCE\ OF\ THE\ FIELD\ '%S'?=\u00bfEliminar %1$d ejemplo(s) del campo '%2$s'?
+DELETE\ %D\ INSTANCE\ OF\ THE\ FIELD\ '%S'?=\u00bfEliminar %1$d ejemplo(s) del campo ''{1}''?
 CANNOT\ DELETE=No se puede eliminar
 THIS\ FIELD\ CANNOT\ BE\ DELETED\ FROM\ ONE\ OR\ MORE\ OF\ THE\ SHOWN\ NODES=Este campo no se puede eliminar de uno o m\u00e1s de los nodos visualizados
 A\ COLUMN\ VIEW\ WITH\ THE\ SAME\ NAME\ ALREADY\ EXISTS,\ NOTHING\ SAVED=Una vista de columna con el mismo nombre ya existe, no se ha guardado nada
@@ -171,7 +171,7 @@ ENTER\ THE\ RESOURCE\ URI\:=Insertar el URI del recurso:
 COULD\ NOT\ DETERMINE\ THE\ ORIGIONAL\ LOCATION=No se pudo determinar la ubicaci\u00f3n original
 COULD\ NOT\ DETERMINE\ THE\ ORIGIONAL\ NODE\ TYPE=No se pudo determinar el tipo original de nodo
 RE\ IMPORT\ BRANCH=Reimportar rama
-ADDING\ A\ NODE\ WILL\ SAVE\ PENDING\ CHANGES=Al agregar un nodo se guardar\u00e1n los cambios pendientes a "%s" en el disco. \u00bfContinuar?
+ADDING\ A\ NODE\ WILL\ SAVE\ PENDING\ CHANGES=Al agregar un nodo se guardar\u00e1n los cambios pendientes a "{0}" en el disco. \u00bfContinuar?
 PROFILES_REFRESH\ LIST=Actualizar lista
 PAGE\ NOT\ FOUND=No se pudo encontrar la p\u00e1gina
 CONTENTS=Contenido
@@ -202,7 +202,7 @@ ADD\ PROFILE=Agregar perfil
 ENTER\ THE\ PROFILE\ URL=Insertar el URL del perfil
 PROFILES_ADD\ A\ PROFILE\ URL\ TO\ THE\ LIST=Agregar un URL de perfil a la lista
 PROFILES_ADD\ URL=Agregar URL
-PROFILES\ SELECTED\ BELOW\ WILL\ BECOME\ AVAILABLE\ IN\ THE\ 'ADD'\ MENU\ OF\ THE\ LOCAL\ CORPUS.\ BY\ DEFAULT,\ ONLY\ SELECTED\ PROFILES\ WILL\ BE\ DOWNLOADED\ FOR\ OFFLINE\ USE.=Los perfiles seleccionados aqu\u00ed abajo ser\u00e1n disponibles en el men\u00fa 'Agregar' del corpus local. De manera predeterminada, s\u00f3lo los perfiles seleccionados se descargar\u00e1n para ser utilizados sin conexi\u00f3n. 
+PROFILES\ SELECTED\ BELOW\ WILL\ BECOME\ AVAILABLE\ IN\ THE\ 'ADD'\ MENU\ OF\ THE\ LOCAL\ CORPUS.\ BY\ DEFAULT,\ ONLY\ SELECTED\ PROFILES\ WILL\ BE\ DOWNLOADED\ FOR\ OFFLINE\ USE.=Los perfiles seleccionados aqu\u00ed abajo ser\u00e1n disponibles en el men\u00fa ''Agregar'' del corpus local. De manera predeterminada, s\u00f3lo los perfiles seleccionados se descargar\u00e1n para ser utilizados sin conexi\u00f3n. 
 ONLY\ LOAD\ PROFILES\ SELECTED\ FOR\ MANUAL\ EDITING=Cargar s\u00f3lo los perfiles seleccionados para ser modificados manualmente
 PROFILES_DOWNLOAD\ ALL\ PROFILES\ FOR\ OFFLINE\ USE\ (INCLUDING\ UNSELECTED\ PROFILES)=Descargar todos los perfiles para que se utilicen sin conexi\u00f3n (incluso los perfiles sin seleccionar)
 PROFILES_DOWNLOAD\ ALL=Descargar todo
@@ -211,7 +211,7 @@ PROFILES_RELOAD\ SELECTION=Volver a cargar selecci\u00f3n
 DOWNLOAD\ THE\ LATEST\ CLARIN\ PROFILES=Descargar los perfiles CMDI m\u00e1s recientes
 TOTAL\ METADATA\ FILES\ FOUND\:\ =Archivos de metadatos encontrados en total:
 TOOLTIP_SCHEMA\ VALIDATION\ ERROR\ (CHECK\ XML\ CONFORMANCE\ FOR\ DETAILS)=Error en la validaci\u00f3n con el esquema (comprobar conformidad con XML para m\u00e1s detalles)
-TOOLTIP_AVAILABLE\ IN\ THE\ FAVOURITES\ MENU=Disponible en el men\u00fa de 'Favoritos'
+TOOLTIP_AVAILABLE\ IN\ THE\ FAVOURITES\ MENU=Disponible en el men\u00fa de ''Favoritos''
 TOOLTIP_UNSAVED\ CHANGES=Cambios sin guardar
 TOOLTIP_HISTORY\ OF\ CHANGES\ ARE\ AVAILABLE=Historial de cambios disponible
 TOOLTIP_FILE\ NOT\ FOUND=No se encontr\u00f3 el archivo
@@ -242,7 +242,7 @@ REPLACE\ EXISTING\ LOCATION?=\u00bfReemplazar ubicaci\u00f3n existente?
 NEW\ LOCATION=Nueva ubicaci\u00f3n
 REPLACE=Reemplazar
 OVERWRITE\ FILE?=\u00bfSobreescribir archivo?
-THE\ FOLLOWING\ FILE\ ALREADY\ EXIST\ IN\ THE\ TARGET\ LOCATION=El siguiente archivo ya existe en la ubicaci\u00f3n de destino:\n\n%s\n\n\u00bfSobreescribir?
+THE\ FOLLOWING\ FILE\ ALREADY\ EXIST\ IN\ THE\ TARGET\ LOCATION=El siguiente archivo ya existe en la ubicaci\u00f3n de destino:\n\n{0}\n\n\u00bfSobreescribir?
 DETAILS=Detalles
 PERFORMCOPY=Copiar
 DETAILS\ >\ >=Detalles > >
@@ -292,7 +292,7 @@ NEW\ TEMPLATE=Nueva plantilla
 THE\ TEMPLATE\ {0}\ ALREADY\ EXISTS=La plantilla "{0}" ya existe.
 TEMPLATES=Plantillas
 THE\ TEMPLATE\ {0}\ COULD\ NOT\ BE\ CREATED.=No se pudo crear la plantilla "{0}".
-%S\ (INTERNAL)=%s (interno)
+%S\ (INTERNAL)={0} (interno)
 LOADING\ NODE...=cargando nodo...
 HISTORY_LAST\ SAVE=\u00daltima grabaci\u00f3n
 COPY\ OF\ {0}=copia de {0}
@@ -327,12 +327,12 @@ DELETE=Eliminar
 DELETE\ {0}\ NODES?=\u00bfEliminar {0} nodos?
 THIS\ WILL\ ALSO\ SAVE\ ANY\ PENDING\ CHANGES\ TO\ DISK.=Se guardar\u00e1n en el disco inlcuso los posibles cambios pendientes.
 DELETE\ THE\ NODE\ {0}?=\u00bfEliminar el nodo "{0}"?
-DELETE\ %D\ NODES\ FROM\ THEIR\ PARENT\ '%S'?=\u00bfEliminar %d nodos de su nodo primario '%s'?\nSe guardar\u00e1n los cambios pendientes.\n
-DELETE\ THE\ NODE\ '%S'\ FROM\ ITS\ PARENT\ '%S'?=\u00bfEliminar el nodo '%s' de su nodo primario '%s'?\nSe guardar\u00e1n los cambios pendientes.\n
-CANNOT\ COPY\ {0}\ TO\ {1}="No se puede copiar '{0}' en '{1}'"
+DELETE\ %D\ NODES\ FROM\ THEIR\ PARENT\ '%S'?=\u00bfEliminar %d nodos de su nodo primario ''{0}''?\nSe guardar\u00e1n los cambios pendientes.\n
+DELETE\ THE\ NODE\ '%S'\ FROM\ ITS\ PARENT\ '%S'?=\u00bfEliminar el nodo ''{0}'' de su nodo primario ''{1}''?\nSe guardar\u00e1n los cambios pendientes.\n
+CANNOT\ COPY\ {0}\ TO\ {1}=No se puede copiar ''{0}'' en ''{1}''
 FOUND\ MORE\ RESULTS\ THAN\ CAN\ BE\ DISPLAYED,\ ONLY\ SHOWING\ THE\ FIRST\ {0}\ RESULTS=Se han encontrado m\u00e1s resultados, aqu\u00ed se ven s\u00f3lo los primeros {0} resultados
 CANNOT\ SEARCH\ {0}\ BECAUSE\ IT\ DOES\ NOT\ HAVE\ AN\ ARCHIVE\ HANDLE=No se puede buscar "{0}" porque no tiene un apodo en el archivo
 DELETE\ FROM\ PARENT=Eliminar de nodo primario
 <P><STRONG>I/O\ EXCEPTION\ WHILE\ READING\ HELP\ CONTENTS</STRONG></P>=<p><strong>excepci\u00f3n I/O al leer el contenido de la gu\u00eda</strong></p>
 XSDCHECKER=Chequeador de XSD
-LANGUAGES\ TO\ DISPLAY\ IN\ THE\ FIELD\ LANGUAGE\ SELECT\ BOX\ FOR\ IMDI=Idiomas para poner en el men\u00fa desplegable del campo 'Descripci\u00f3n' (IMDI)
+LANGUAGES\ TO\ DISPLAY\ IN\ THE\ FIELD\ LANGUAGE\ SELECT\ BOX\ FOR\ IMDI=Idiomas para poner en el men\u00fa desplegable del campo ''Descripci\u00f3n'' (IMDI)
